# asset_advisor

./: .gitignore  README.md  portfolio-app-development-plan.md  pyproject.toml
data/samples/: kr_blue_chip.csv  mixed_global.csv  us_tech_portfolio.csv
src/portfolio_ai/: __init__.py
src/portfolio_ai/cli/: commands.py  main.py
src/portfolio_ai/core/: ai_insights.py  analyzer.py  models.py  rebalancer.py
src/portfolio_ai/data/: exporter.py  loader.py  market_data.py  validators.py
src/portfolio_ai/utils/: formatters.py  metrics.py
tests/: test_ai_insights.py  test_analyzer.py  test_commands.py  test_exporter.py  test_formatters.py  test_integration.py  test_loader.py  test_market_data.py  test_metrics.py  test_models.py  test_rebalancer.py  test_validators.py
